--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -66,8 +66,8 @@
 }
 .darkbtn{
   border-radius: 5px;
-  background-color: #61dafb;
-  border: 2px solid #61dafb;
+  background-color: blueviolet;
+  border: 2px solid blueviolet;
   width: 6vw;
   font-size: 1vw;
   padding: 5px;
@@ -76,11 +76,11 @@
 }
 .buton1{
   border-radius: 5px;
-  border: 2px solid #61dafb;
+  border: 2px solid blueviolet;
   width: 12vw;
   font-size: 1vw;
   padding: 5px;
-  color: #61dafb;
+  color: blueviolet;
 }
 .buton2{
   color: white;
@@ -96,7 +96,8 @@
   font-size: 1vw;
 }
 .questions{
-  width: 400px;
+  width: 50vw;
+  font-size: 2vw;
   text-align: left;
   justify-content: space-between;
   display: flex;
@@ -107,4 +108,119 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+}
+.getStarted{
+  border-radius: 30px;
+  background-color: black;
+  width: 20%;
+  font-size: .8rem;
+  padding: 15px;
+  color: white;
+  margin-bottom: 15px;
+  margin: 1%;
+}
+.seOtherplan{
+  border-radius: 30px;
+  border: 1px solid white;
+  background-color: transparent;
+  width: 20%;
+  margin: 1%;
+  font-size: .8rem;
+  padding: 15px;
+  color: white;
+}
+.getMini{
+  border-radius: 30px;
+  border: 1px solid white;
+  background-color: white;
+  width: 20%;
+  margin: 1%;
+  font-size: .8rem;
+  padding: 10px;
+  color: black;
+}
+.btnParent{
+  flex-direction:row;
+  display:flex;
+  justify-content: center;
+  align-content: inline-block;
+  margin:1%
+
+}
+.navBtns{
+  font-size:10px;
+  color:white;
+  display:flex;
+  justify-content:space-between;
+  width:300px;
+  padding-right: 10%;
+  font-size: 1.2vw;
+}
+.navBtns p{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.spotifylogoUper{
+  width:100px;
+  padding-left:100px
+}
+@media only screen and (max-width:700px) {
+  .questions{
+    width: 50vw;
+    font-size: 3vw;
+    text-align: left;
+    justify-content: space-between;
+    display: flex;
+  }
+  .spotifylogoUper{
+    margin:5%;
+    width:60px;
+    padding-left:100px
+  }
+  .navBtns{
+    
+    font-size:10px;
+    color:white;
+    display:flex;
+    justify-content:space-between;
+    width:300px;
+    margin:1.5%;
+    padding-right: 10%;
+    font-size: 1.7vw;
+  }
+  .btnParent{
+    flex-direction:column;
+    display:flex
+  }
+  .getMini{
+    border-radius: 30px;
+    border: 1px solid white;
+    background-color: white;
+    width: 90%;
+    margin: 1%;
+    font-size: .8rem;
+    padding: 15px;
+    color: black;
+  }
+  .getStarted{
+    border-radius: 20px;
+    background-color: black;
+    width: 90%;
+    margin: 4%;
+    font-size: .6rem;
+    padding: 15px;
+    color: white;
+    margin-bottom: -5px;
+  }
+  .seOtherplan{
+    border-radius: 20px;
+    border: 1px solid white;
+    background-color: transparent;
+    width: 90%;
+    margin: 4%;
+    font-size: .6rem;
+    padding: 15px;
+    color: white;
+   
+  }
 }
