--- a/flipkart-app/src/App.css
+++ b/flipkart-app/src/App.css
@@ -100,7 +100,11 @@
   font-size: 1.2vw;
   display: inline-block;
 }
-
+.optionsHeader{
+  border:none;
+  background-color:transparent;
+  cursor: pointer;
+}
 @media only screen and (max-width:700px) {
 
   .searchBar{
